styles.css
:root {
	--border-btn: 1px solid rgb(36, 36, 36);
	--color-base-bg: rgb(240, 240, 240);
	--color-base-text: rgb(18, 18, 18);
	--color-btn-bg: rgb(220, 220, 220);
	--theme-name: "light";
  }
  
  body {
	background-color: var(--color-base-bg);
	color: var(--color-base-text);
	padding: 10px;
  }
  
  .container {
	display: flex;
	flex-direction: column;
	align-items: center;
  }
  
  p {
	font-size: 1.5rem;
  }
  
  

body {
	padding: 0;
	margin: 0;
	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

div {
	position: relative;
    z-index: 99;
}

button:hover, input:hover {
	background-color: #005ff7;
	border-color: #005ff7;
}

#main-container {
	height: 100vh;
	display: grid;
	grid-template-columns: clamp(100px, 30%, 300px) 100vw;
	grid-template-rows: repeat(2, 100%);
}

#sidebar {
	background-color: #1992d4;
	color: #ffffff;
}

#right-container {
	background-color: #e2e8f0;
}

#header {
	background-color: #ffffff;
}


button, input {
	display: flex;
	justify-content: center;
	padding: 10px 10px;
	margin: 0 25px;
	width: 100%;
	max-width: 50px;
	height: 50px;
	color: #e5e7eb;
	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
	font-weight: bolder;
	font-size: 16px;
	background-color: #3882f6;
	border-style: solid;
	border-color: #3882f6;
	border-radius: 10px;
	margin: 0;
	font-family: arial;
}

#dashboard-img {
	width: 50px;
	height: 50px;
}

svg > path{
	fill: #ffffff;
}

@media (prefers-color-scheme: dark) {
	:root {
	  --border-btn: 1px solid rgb(220, 220, 220);
	  --color-base-bg: rgb(18, 18, 18);
	  --color-base-text: rgb(240, 240, 240);
	  --color-btn-bg: rgb(36, 36, 36);
	  --theme-name: "dark";
	}
	svg > path{
		fill: #000000;
	}
	#right-container {
		background-color: #232327;
	}
	
	#header {
		background-color: #181818;
	}
	#sidebar {
		color: #000000;
	}
  }
  
  .theme-name::after {
	content: var(--theme-name);
  }

